@@ -1,12 +1,12 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.4 2002-02-26 17:55:56 joostvb Exp $
+## $Id: Makefile.am,v 1.5 2002-03-13 12:11:17 joostvb Exp $
 
 VERSION: ChangeLog
 	./setversion
 
 VERSION = @VERSION@
 
-SUBDIRS = mk
+SUBDIRS = mk sgml
 
 docdir = $(datadir)/doc/$(PACKAGE)
 doc_DATA = AUTHORS COPYING ChangeLog README THANKS TODO
