@@ -1,0 +1,7 @@
+## Process this file with automake to produce Makefile.in
+## $Id: Makefile.am,v 1.1 2002-03-13 12:09:56 joostvb Exp $
+
+sgmldir = $(datadir)/sgml/$(PACKAGE)
+sgml_DATA = print.dsl html.dsl
+EXTRA_DIST = $(sgml_DATA)
+
